<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/i">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Bluetooth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/currentConnectionLabel"
                        android:id="@+id/currentConnectionLabel"
                        style="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/currentConnection"
                        android:text="@string/defaultConnectionName" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnNewConnection"
                        android:id="@+id/btnNewConnection" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/DMX"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tableLayout">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/channelNumberLabel"
                                android:id="@+id/channelNumberLabel" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:id="@+id/channelNumber"
                                android:text="@string/eightBitDefault"
                                android:maxLength="3" />

                            <Button
                                style="?android:attr/buttonStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnDecrementChannelLabel"
                                android:id="@+id/btnDecrementChannel"
                                android:layout_column="2" />

                            <Button
                                style="?android:attr/buttonStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnIncrementChannelLabel"
                                android:id="@+id/btnIncrementChannel" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/channelValueLabel"
                                android:id="@+id/channelValueLabel" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/channelValue"
                                android:layout_column="1"
                                android:text="@string/eightBitDefault"
                                android:maxLength="3" />

                            <SeekBar
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/channelValueSlider"
                                android:max="255"
                                android:indeterminate="false"
                                android:layout_column="2"
                                android:progress="127"
                                android:layout_weight="1" />

                        </TableRow>

                    </TableLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSetChannelLabel"
                        android:id="@+id/btnSetChannel"
                        android:layout_below="@+id/tableLayout"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</RelativeLayout>
